feat: 추천/분석 핸들러 및 ProfileStockFilter 개선 (EPS 필터링, 성향 기반 다양화)